09-netwotk-policies/np-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: docker-security
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
